@@ -338,8 +338,8 @@ feature iconv : auto on off : composite propagated ;
 feature.compose <iconv>on : <define>TORRENT_USE_ICONV=1 ;
 feature.compose <iconv>off : <define>TORRENT_USE_ICONV=0 ;
 
-feature valgrind : off on : composite propagated link-incompatible ;
-feature.compose <valgrind>on : <define>TORRENT_USE_VALGRIND=1 ;
+feature use-valgrind : off on : composite propagated link-incompatible ;
+feature.compose <use-valgrind>on : <define>TORRENT_USE_VALGRIND=1 ;
 
 feature memory-optimization : off on : composite propagated link-incompatible ;
 feature.compose <memory-optimization>on : <define>TORRENT_OPTIMIZE_MEMORY_USAGE ;
